test/code/vue/syntax-error/no-china-script-and-js-syntax-error.vue
<template>
  <section class="guide-wrap-section">
    <p>全新字符串，不存在locale文件中</p>
  </section>
</template>

<script>
const a =;
const comp = {
  async mounted() {},
  data() {},
  methods: {
    goToSupplierEnter() {
      this.$router.push({
        name: 'companyEnter',
      });
    },
  },
};
</script>
